fix misaligned "sign in" and "reviewer tools" buttons on desktop (bug 870035)

--- a/hearth/media/css/forms.styl
+++ b/hearth/media/css/forms.styl
@@ -158,9 +158,9 @@ textarea {
         .extras {
             background: $salt-flat-white;
             border: 0;
-            a + a {
-                margin-top: 15px;
-            }
+        }
+        .reviewer-tools {
+            margin-top: 15px;
         }
         button {
             width: 100%;
@@ -200,6 +200,9 @@ textarea {
     #account-settings .secondary-header h2 {
         // To accomodate the floated "Sign in" button.
         max-width: calc(unquote('100% - 330px'));
+    }
+    .reviewer-tools {
+        display: none;
     }
 }
 
